minimalized german site changed design of project tags created new sites for projects wrote artikle about careontime app

--- a/index-de.html
+++ b/index-de.html
@@ -54,7 +54,7 @@
     <section id="banner" style="background-image: url(http://thoma997.github.io/images/banner.JPG); background-size: cover">
         <div class="inner" style="margin-top: 300px; background: rgba(0,0,0,0.4); padding-top: 10px;">
             <h2>Willkommen!</h2>
-            <p>Das ist <strong>Martin S. Thoma</strong>s Website.</br>
+            <p>Ich bin <strong>Martin S. Thoma</strong>.</br>
                 Hier finden Sie eine kurze Präsentation</br>meiner Projekte, Leidenschaften und mir selbst.</p>
         </div>
         <br />
@@ -77,9 +77,25 @@
             </ul>
         </div>
     </section> -->
+    <section class="wrapper style5">
+        <div class="inner">
+
+            <h3>Liebe Besucher! </h3>
+            <p>Vielen Dank für Ihr Interesse! Um dem Wartungsaufwand der Webseite gering zu halten, habe ich mich entschieden, Informationen zu mir und meinen Arbeiten nur noch in englischer Verson zu veröffentlichen.</p>
+
+            <p>Falls Sie sich überlegen, mich als Website Entwickler zu engagieren, können Sie dies weiterhin in deutscher Fassung tun. </p>
+
+            <p>Vielen Dank für Ihr Verständnis.</p>
+            <p>Martin Thoma</p>
+            <ul class="actions fit">
+                <li><a href="index.html" class="button fit special">Englische Version</a></li>
+                <li><a href="webseiten-de.html" class="button fit special">Webseiten Entwicklung</a></li>
+            </ul>
+        </div>
+    </section>
 
     <!-- Two -->
-    <section id="two" class="wrapper alt style2">
+    <!--<section id="two" class="wrapper alt style2">
         <section class="spotlight">
             <div class="image"><img src="images/work_background.jpg" alt="work_background.jpg" /></div><div class="content">
             <h2>Arbeit</h2>
@@ -101,9 +117,9 @@
             <p>In Karlsruhe bin ich aktives Mitglied der Hochschulgruppe PionierGarage e.V. sowie der Stiftung Wissen + Kompetenzen. Es hat mir viel Freude bereitet, mich als Vorstand für Events und Projektkoordinator des größten, von Studierenden organisierten Gründubngswettbewerbes Deutschlands "GROW" in der PionierGarage mit einzubringen. In Australien bin ich der Newcastle University Diving and Exploration Society beigetreten und habe ein Charity Dinner für über 200 Menschen organisiert. Als Ausgleich zum Studium mache ich alle möglichen Team- und Einzelsportarten.</p>
         </div>
         </section>
-    </section>
+    </section>-->
     <!-- Three -->
-    <section id="three" class="wrapper style3 special">
+    <!--<section id="three" class="wrapper style3 special">
         <div class="inner">
             <header class="major">
                 <h2>Projekte und Leidenschaften</h2>
@@ -141,7 +157,7 @@
                 </li>
             </ul>
         </div>
-    </section>
+    </section>-->
 
     <!-- CTA -->
     <section id="form" class="wrapper style4">
