--- a/index.html
+++ b/index.html
@@ -105,42 +105,82 @@
 					</section>
 
 				<!-- Three -->
-					<section id="three" class="wrapper style3 special">
+					<section id="three" class="wrapper style2 special ">
 						<div class="inner">
 							<header class="major">
-								<h2>Projects and Passions</h2>
+								<h2>Projects and Passions: A Personal Blog?</h2>
 								<p>Are you interested in what I am interested? Watch through!</p>
 							</header>
 							<ul class="features">
-								<li class="icon fa-code">
-									<h3>Programming Websites</h3>
-									<p>Programming websites and contact to costumers are a lot of fun and a posibility to earn some money while studying. You like to see an example besides this website?
-										<a href="http://reiserlaw.eu">Here you go</a></p>
-									<p>If you are interested in getting your own website, <a href="websites.html" class="more scrolly">just click here.</a></p>
-								</li>
-								<li class="icon fa-search">
-									<h3>Job Seeker</h3>
-									<p>To finance my stay and studies in Australia I am looking for a job as bar tender, barista or waiter. I would love to find a job with contact to costumers also in other branches than hospitality.</p>
-								    <p>You know someone who knows someone? <a href="#form" class="more scrolly">Just say hello!</a> </p>
-                                </li>
-								<li class="icon fa-leaf">
-									<h3>GROW-Gründungswettbewerb</h3>
-									<p>To be responsible for the organisation of the biggest entrepreneurship contest in Germany that is organized by students was a lot of work but honor. 18 teams accepted the challenge but only the best could win prices of more than 8000€</p>
-                                    <p><a href="grow.pioniergarage.de">Here</a> you will find all you need to know. Next GROW takes place in winter 2018.</p>
-								</li>
-								<li class="icon fa-rocket">
-									<h3>Managing Director at PionierGarage e.V.</h3>
-                                    <p>PionierGarage e.V. is  the entrepreneurship student club of Karlsruher Institut of Technologie. By joining them I became highly interested in founding my own company. Since then, I started to work on projects to follow my aim to change something.
-                                        </br>If you are interested in entrepreneurship </br>just follow the
-                                        <a href="http://pioniergarage.de">Link to PionierGarage</a>.</p>
-								</li>
-								<li class="icon fa-book">
+								<!-- <li class="icon fa-book">
 									<h3>Becoming an Analyst</h3>
 									<p>Statistics, Operations Research and Computer Science. Together they built the ultimate tool to analyze huge amounts of data and to predict complex dependencies. In the next few months and during my masters degree I am looking forward to get deeper knowledge in those fields.</p>
 								</li>
 								<li class="icon fa-volume-up">
 									<h3><a href="#form" class="more scrolly">Say Hello!</a></h3>
 									<p>I am open minded and interested in connecting with new people. Just write a short message - you will find the contact form below. </p>
+								</li>-->
+								<li class="icon fa-code">
+									<h3>3D object detection</h3>
+									<p>Within a time span of 24h, we rocked the autonmshck organized by Daimler and PionierGarage by applying state-of-the-art machine learning models onto 3D LiDAR point clouds and using the results to design a mobile applicaiton future Daimler customers.</p>
+									<ul class="actions fit">
+										<li><a href="autonmshck.html" class="button fit special">autonmshck 2018</a></li>
+									</ul>
+									<a class="tag">Nov 18</a>
+									<a class="tag">Karlsruhe</a>
+									<a class="tag">Hackathon</a>
+									<a class="tag">Daimler</a>
+									<a class="tag">Autonomous Driving</a>
+								</li>
+								<li class="icon fa-volume-up">
+									<h3>Digital Change Summit</h3>
+									<p>At the Handelsblatt Digital Change Summit, top level managers of Daimler, Deutsche Bank and Signal Iduna discussed about challanges and opportunities of  actuall change processes in German econimy caused by digitalization.</p>
+									<ul class="actions fit">
+										<li><a href="digital-change-summit.html" class="button fit special">Summit Impressions</a></li>
+									</ul>
+									<a class="tag">Nov 18</a>
+									<a class="tag">Handelsblatt</a>
+									<a class="tag">Digital Change</a>
+									<a class="tag">Panel Discussion</a>
+									<a class="tag">Frankfurt am Main</a>
+								</li>
+								<li class="icon fa-code">
+									<h3>Care On Time</h3>
+									<p>During an hackathon organized by the University of Newcastle, Australia, my team developed a costumer oriented, mobile application that aims to make the lifes of millions of care takers more convenient every day.</p>
+									<br>
+
+									<ul class="actions fit">
+										<li><a href="care-on-time.html" class="button fit special">Care On Time Project</a></li>
+									</ul>
+										<a class="tag">July 18</a>
+										<a class="tag">NSW, Australia</a>
+										<a class="tag">University of Newcastle</a>
+										<a class="tag">Health Care</a>
+										<a class="tag">Hackathon</a>
+
+								</li>
+								<li class="icon fa-code">
+									<h3>Programming Websites</h3>
+									<p>Programming websites and contact to costumers are a lot of fun and a posibility to earn some money while studying. You like to see an example besides this website?
+										<br><a href="http://reiserlaw.eu">Here you go</a></p>
+									<br>
+									<ul class="actions fit">
+										<li><a href="websites.html" class="button fit special">Website Development</a></li>
+									</ul>
+									<a class="tag">May 16</a>
+									<a class="tag">Website</a>
+									<a class="tag">Business</a>
+								</li>
+								<li class="icon fa-leaf">
+									<h3>GROW-Gründungswettbewerb</h3>
+									<p>To be responsible for the organisation of the biggest entrepreneurship contest in Germany that is organized by students was a lot of work but honor. 18 teams accepted the challenge but only the best could win prices of more than 8000€</p>
+									<p><a href="grow.pioniergarage.de">Here</a> you will find all you need to know. Next GROW takes place in winter 2018.</p>
+								</li>
+								<li class="icon fa-rocket">
+									<h3>Managing Director at PionierGarage e.V.</h3>
+									<p>PionierGarage e.V. is  the entrepreneurship student club of Karlsruher Institut of Technologie. By joining them I became highly interested in founding my own company. Since then, I started to work on projects to follow my aim to change something.
+										</br>If you are interested in entrepreneurship </br>just follow the
+										<a href="http://pioniergarage.de">Link to PionierGarage</a>.</p>
 								</li>
 							</ul>
 						</div>
