--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/work_background.jpg" alt="work_background.jpg" /></div><div class="content">
 								<h2>Work</h2>
-							<p>Currently, I am working as a Tutor at the KIT institute for executive informatics and formal description methods (AIFB). Therefore preparing lessons and teaching students is part of my everyday business. To finance my studies I am working as a freelancer as well. I develop websites for privaters and small businesses. I gained experience in Web Automation, Business Analytics, Machine Intelligence, Project Management etc. I love to master challenges and to force myself out of comfort zones.<br /><br />
+							<p>Currently, I am working as Tutor at the Institute for Executive Informatics and Formal Description Methods (AIFB, KIT). Therefore, preparing lessons and teaching students is part of my everyday business. To finance my studies I am working as a freelancer as well. I develop websites for privaters and small businesses and moderate small to large tech events. I gained experience in Web Automation, Business Analytics, Machine Intelligence, Project Management etc. However, I love to master challenges and to force myself out of comfort zones (of course, who doesn't?).<br /><br />
 							</p>
 							<a href="websites.html" style="horiz-align: center" class="button">Learn More</a>
 							</div>
@@ -93,13 +93,13 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/studies_australia.jpg" alt="studies_australia.jpg" /></div><div class="content">
 								<h2>Studies</h2>
-								<p>At the moment I am studying Industrial Engineering and Management at Karlsruhe University of Technology. Lately, I have begun to write my Bachelors Thesis about mapping stock charts with parameters gained by analysing satellite pictures with machine learning algorithms. I write this thesis at the <a href="https://risk.fbv.kit.edu/c-ram/index.php">Institute for Computational Risk and Asset Management</a>. I also very enjoyed the time abroad during spring/summer 2018 at University of NewCastle, NSW, Australia.
+								<p>At the moment I am studying Industrial Engineering and Management at Karlsruhe University of Technology (7th semester - hopefully finished in July'19). In November, I began to write my Bachelors Thesis about the correlation between asset prices and parameters of container shipping industry, gained by the analysis of satellite images with machine learning algorithms (almost done!!!). I write this thesis at the <a href="https://risk.fbv.kit.edu/c-ram/index.php">Institute for Computational Risk and Asset Management</a>. Also, I very enjoyed the time abroad during spring/summer 2018 at University of NewCastle, NSW, Australia, and I am looking forward so much to start my next adventure in Montreal, Canada, where I will do some research about "Artificial Intelligence in Legal Domains" from May to July'19.
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/social_engagement.jpg" alt="social_engagement.jpg" /></div><div class="content">
 								<h2>Social Engagement and Hobbies</h2>
-								<p>Next to performing various activities like scuba diving, playing football and weight lifting, I am an active member of<br /> <a href="http://www.wplusk.de/">"Stiftung Wissen+Kompetenzen"</a> and <a href="https://pioniergarage.de/">"PionierGarage e.V."</a>. Back in Germany I was Managing Director of PionierGarage and Project Coordinator of <a href="http://grow.pioniergarage.de/">"GROW - Gründungswettbewerb"</a>. </br>In Australia I organized the "Cheap Chewsday - Germany" in May 2018. It's a subsidized cooking event where we cooked German dinner and brought German culture to about 220 people!</p>
+								<p>Next to performing various activities like scuba diving, playing football and weight lifting, I am an active member of<br /> <a href="http://www.wplusk.de/">"Stiftung Wissen+Kompetenzen"</a> and <a href="https://pioniergarage.de/">"PionierGarage e.V."</a>. In winter 17/18 I was Managing Director of PionierGarage and Project Coordinator of <a href="http://grow.pioniergarage.de/">"GROW - Gründungswettbewerb"</a>. </br>In Australia my team and I organized the "Cheap Chewsday - Germany" in May 2018. It's a subsidized cooking event where we cooked German dinner and brought German culture to about 220 people! Since January '19, I am proud to call myself member of Enactus Karlsruhe, a student society sharing the believe that investing in students who take entrepreneurial action for others will will create a better world for us all.</p>
 							</div>
 						</section>
 					</section>
@@ -110,6 +110,7 @@
 							<header class="major">
 								<h2>Projects and Passions: A Personal Blog?</h2>
 								<p>Are you interested in what I am interested? Watch through!</p>
+								<p>Note: I am sorry! Not all articles are written yet due to work, studies and bla :)</p>
 							</header>
 							<ul class="features">
 								<!-- <li class="icon fa-book">
