--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/work_background.jpg" alt="work_background.jpg" /></div><div class="content">
 								<h2>Work</h2>
-							<p>Currently, I am working as Tutor at the Institute for Executive Informatics and Formal Description Methods (AIFB, KIT). Therefore, preparing lessons and teaching students is part of my everyday business. To finance my studies I am working as a freelancer as well. I develop websites for privaters and small businesses and moderate small to large tech events. I gained experience in Web Automation, Business Analytics, Machine Intelligence, Project Management etc. However, I love to master challenges and to force myself out of comfort zones (of course, who doesn't?).<br /><br />
+							<p>Currently, I am working as Tutor at the Institute for Executive Informatics and Formal Description Methods (AIFB, KIT). Therefore, preparing lessons and teaching students is part of my everyday business. To finance my studies I am working as a freelancer as well. I develop websites for privaters and small businesses from time to time, I moderate small to large tech events (<a href="https://www.youtube.com/watch?v=qTv1E0uFjXI">lately together with EnBW</a>). Every now and than, I gain some experience in Web Automation, Business Analytics, Machine Intelligence, Project Management etc. However, I love to master challenges and to force myself out of comfort zones (of course, who doesn't?).<br /><br />
 							</p>
 							<a href="websites.html" style="horiz-align: center" class="button">Learn More</a>
 							</div>
