--- a/digital-change-summit.html
+++ b/digital-change-summit.html
@@ -42,7 +42,7 @@
         <section class="wrapper style5">
             <div class="inner">
 
-                <h3>Artikel has not been written yet but will come soon :-)</h3>
+                <h3>Sorry - the article has not been written yet (obviously) but will come soon :-) (Anyway, if you are interested, I am happy to provide further informations!)</h3>
             </div>
         </section>
     </article>
